--- a/source/index.html
+++ b/source/index.html
@@ -321,6 +321,45 @@
         </div>
       </section>
 
+      <section class="slider">
+        <h2 class="slider__title">
+          Отзывы
+        </h2>
+        <div id="slider-wrap">
+          <div id="slider">
+            <div class="slide">
+              <div class="slide__review">
+                Для меня Анна Олеговна - самый лучший и понимающий врач Иркутска. Никогда еще не видела, чтобы врач так радел за пациента и был на связи 24 часа в сутки. Квалификация врача на очень высоком уровне. Когда случились проблемы во время беременности, она всегда была на связи и отслеживала все методы лечения и мое нахождение на сохранении. Спасибо за двойняшек, за третьим ребенком только
+к ней.
+              </div>
+              <img class="slide__img" src="/img/face1.png">
+              <span class="slide__name">
+                Мария
+              </span>
+            </div>
+            <div class="slide">
+              <div class="slide__review">
+                Замечательный, чуткий врач. Спасибо Вам огромное! Диагноз поставила верный и назначила качественное лечение.
+              </div>
+              <img class="slide__img" src="/img/face2.png">
+              <span class="slide__name">
+                Анна
+              </span>
+            </div>
+            <div class="slide">
+              <div class="slide__review">
+                Могу, как про репродуктолога, сказать, что профессиональный врач! Внимательно выслушал, дал рекомендации, все сделал по высшему разряду, все получилось с первого раза! Всегда на связи, что очень важно при ЭКО. Спокоен и тактичен. Если вам нужен результат, без долгих и ненужных разговоров, это к нему!
+              </div>
+              <img class="slide__img" src="/img/face3.png">
+              <span class="slide__name">
+                Лопес
+              </span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
       <section class="pay">
         <h2 class="visually-hidden">
@@ -536,7 +575,8 @@
         © Все права защищены. 2007-2019 г.
       </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery-1.7.2.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="js/nav.js"></script>
     <script src="js/page-scroller-button.js"></script>
   </body>
