--- a/source/index.html
+++ b/source/index.html
@@ -352,10 +352,88 @@
               </div>
               <img class="slide__img" src="/img/face3.png">
               <span class="slide__name">
-                Лопес
+                Ирина
               </span>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="doctors">
+        <div class="doctors__wrap">
+          <h2 class="doctors__title">
+            Наши врачи
+          </h2>
+          <ul class="doctors__list">
+            <li class="doctors__item">
+              <img class="doctors__img" src="/img/doctor_1.jpg">
+              <div class="doctors__description">
+                <div class="doctors__name">
+                  Имя Фамилия Отчество
+                </div>
+                <div class="doctors__profession">
+                  Должность врача
+                </div>
+                <div class="doctors__achievements">
+                  Перечень достижений, образование, описание опыта и стажа специалиста
+                </div>
+                <a class="doctors__link" href="#">
+                  Написать
+                </a>
+              </div>
+            </li>
+            <li class="doctors__item">
+              <img class="doctors__img" src="/img/doctor_2.jpg">
+              <div class="doctors__description">
+                <div class="doctors__name">
+                  Имя Фамилия Отчество
+                </div>
+                <div class="doctors__profession">
+                  Должность врача
+                </div>
+                <div class="doctors__achievements">
+                  Перечень достижений, образование, описание опыта и стажа специалиста
+                </div>
+                <a class="doctors__link" href="#">
+                  Написать
+                </a>
+              </div>
+            </li>
+            <li class="doctors__item">
+              <img class="doctors__img" src="/img/doctor_3.jpg">
+              <div class="doctors__description">
+                <div class="doctors__name">
+                  Имя Фамилия Отчество
+                </div>
+                <div class="doctors__profession">
+                  Должность врача
+                </div>
+                <div class="doctors__achievements">
+                  Перечень достижений, образование, описание опыта и стажа специалиста
+                </div>
+                <a class="doctors__link" href="#">
+                  Написать
+                </a>
+              </div>
+            </li>
+            <li class="doctors__item">
+              <img class="doctors__img" src="/img/doctor_4.jpg">
+              <div class="doctors__description">
+                <div class="doctors__name">
+                  Имя Фамилия Отчество
+                </div>
+                <div class="doctors__profession">
+                  Должность врача
+                </div>
+                <div class="doctors__achievements">
+                  Перечень достижений, образование, описание опыта и стажа специалиста
+                </div>
+                <a class="doctors__link" href="#">
+                  Написать
+                </a>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
