--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__menu-item site-list__sub-menu">
               <div class="img-link__wrap">
-                <a href="#about-us">О клинике</a>
+                <a href="about.html">О клинике</a>
                 <span class="site-list__img"></span>
               </div>
               <ul class="sub-menu">
@@ -161,7 +161,7 @@
               </ul>
             </li>
             <li class="site-list__item site-list__menu-item">
-              <a href="#reviews">Цены</a>
+              <a href="price.html">Цены</a>
             </li>
             <li class="site-list__item site-list__menu-item">
               <a href="#contacts">Акции</a>
@@ -437,219 +437,72 @@
         </div>
       </section>
 
+      <section class="doctors-link">
+        <a href="#">
+          Врачи клиники
+        </a>
+      </section>
 
-
-      <section class="pay">
-        <h2 class="visually-hidden">
-          Выплаты и вознаграждения
-        </h2>
-        <a class="page-main__title pay__title" id="pay">
-          Выплаты и вознаграждения
-        </a>
-        <img class="pay__image" src="img/icons_girls_preg.png" alt="логотип компании">
-        <div class="pay__extra">
-          <span>Дополнительные выплаты</span>
-          за
-          <span>кесарево</span>
-          и
-          <span>двойню</span>
-        </div>
-      </section>
-      <section class="plus">
-        <h2 class="visually-hidden">
-          Преимущества
-        </h2>
-        <a class="page-main__title plus__title" id="plus">
-          Преимущества
-        </a>
-        <ul class="plus__list">
-          <li class="plus__item">
-            <img class="plus__image" src="img/1.png" alt="">
-            <div class="plus__description">
-              Моментальное вступление в программу
-            </div>
-          </li>
-          <li class="plus__item">
-            <img class="plus__image" src="img/2.png" alt="">
-            <div class="plus__description">
-              Резус фактор любой<br>
-              <span>(положительный и отрицательный)</span>
-            </div>
-          </li>
-          <li class="plus__item">
-            <img class="plus__image" src="img/3.png" alt="">
-            <div class="plus__description">
-              Можно с одним кесарево
-            </div>
-          </li>
-        </ul>
-        <a class="page-main__title plus__title">
-          Требования
-        </a>
-        <ul class="plus__list">
-          <li class="plus__item">
-            <img class="plus__image" src="img/1-1.png" alt="">
-            <div class="plus__description">
-              Возраст от 20 до 35 лет
-            </div>
-          </li>
-          <li class="plus__item">
-            <img class="plus__image" src="img/2-2.png" alt="">
-            <div class="plus__description">
-              Физическое и психическое здоровье
-            </div>
-          </li>
-          <li class="plus__item">
-            <img class="plus__image" src="img/3-3.png" alt="">
-            <div class="plus__description">
-              Один здоровый ребенок
-            </div>
-          </li>
-        </ul>
-      </section>
-      <section class="sweetmom">
-        <h2 class="visually-hidden">
-          #ясвитмама
-        </h2>
-        <div class="sweetmom__title">
-          <span>#</span>я<span>свит</span>мама
-        </div>
-        <div class="sweetmom__description">
-          Стань свитмамой и получи<br><span>1 200 000</span> рублей
-        </div>
-      </section>
-      <section class="reviews">
-        <h2 class="visually-hidden">
-          Отзывы
-        </h2>
-        <a class="page-main__title reviews__title" id="reviews">
-            Отзывы
-        </a>
-        <div class="reviews__cards">
-          <div class="reviews__card">
-            <div class="reviews__card-top">
-              <img class="plus__image" src="img/face3.png" alt="">
-              <div class="reviews__card-name">
-                О.В
-              </div>
-            </div>
-            <div class="reviews__card-bottom">
-              <div class="reviews__card-content">
-                "Хочу поблагодарить коллектив "Свитчайлд", в частности Юлию Олеговну Бигель, куратора, водителей, за хорошее отношение, внимание и терпение.
-Очень рада, что смогла принять участие в программе, и помочь одной из семей стать счастливыми родителями..."
-              </div>
-              <div class="reviews__card-comment">
-                  20.08.2019 г.
-              </div>
-            </div>
-          </div>
-          <div class="reviews__card">
-            <div class="reviews__card-top">
-              <img class="plus__image" src="img/face2.png" alt="">
-              <div class="reviews__card-name">
-                (сур.мама К.)
-              </div>
-            </div>
-            <div class="reviews__card-bottom">
-              <div class="reviews__card-content">
-              "Теперь я - счастливая сурмама! Только недавно приехала домой после родов и хотела бы высказать свою благодарность Юлие Олеговне, кураторам "Свитчайлд", водителям и психологу, а также врачу, который принимал роды. Вы - лучшие!!!..."
-              </div>
-              <div class="reviews__card-comment">
-                  09.07.2018 г.
-              </div>
-            </div>
-          </div>
-          <div class="reviews__card">
-            <div class="reviews__card-top">
-              <img class="plus__image" src="img/face1.png" alt="">
-              <div class="reviews__card-name">
-                К.М
-              </div>
-            </div>
-            <div class="reviews__card-bottom">
-              <div class="reviews__card-content">
-                Выражаю огромную благодарность коллективу "Свитчайлд" - за понимание, терпении и заботу. Также хотелось бы сказать отдельное спасибо Юлие Олеговне Бигель - она всегда была рядом, поддерживала и помогала. Большое всем спасибо, вы делаете очень хорошее дело..."
-              </div>
-              <div class="reviews__card-comment">
-                  30.05.2018 г.
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="contacts">
-        <h2 class="visually-hidden">
-          Контакты
-        </h2>
-        <a class="page-main__title contacts__title" id="contacts">
-          Контакты
-        </a>
-        <div class="contacts__items">
-          <div class="contacts__item-phone">
-            <div class="contacts__name">
-              Телефон:
+        <div class="contacts__wrap">
+          <div class="contacts__map-wrap">
+            <div class="ymap-container">
+              <div class="loader loader-default"></div>
+              <div id="map-yandex"></div>
+            </div>
+          </div>
+          <div class="contacts__info">
+            <h2 class="contacts__title">
+              Контактная информация
+            </h2>
+            <div class="contacts__description">
+              Вы можете связаться с нами любым удобным для Вас способом:
+            </div>
+            <div class="contacts__adress">
+              644070, г. Москва, Название улицы, 87
             </div>
             <a class="contacts__phone" href="tel:+74952155544">+7 (495) 215-55-44</a>
+            <a class="contacts__mail" href="mailto:bigel@sweetgroup.ru">bigel@sweetgroup.ru</a>
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <a class="contacts__link" href="#">
+                  <img class="contacts__social" src="img/Contacts1.svg">
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a class="contacts__link" href="#">
+                  <img class="contacts__social" src="/img/Contacts2.svg">
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a class="contacts__link" href="#">
+                  <img class="contacts__social" src="/img/Contacts3.svg">
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="contacts__item">
-            <div class="contacts__item-adress">
-              <div class="contacts__adress-top">
-                Адрес:
-              </div>
-              <div class="contacts__adress">
-                Москва, Ул. Аргуновская, 3 кор. 1
-              </div>
-            </div>
-            <div class="contacts__item-mail">
-              <div class="contacts__mail-top">
-                Почта:
-              </div>
-              <a class="contacts__mail" href="mailto:bigel@sweetgroup.ru">bigel@sweetgroup.ru</a>
-            </div>
-          </div>
-        </div>
-        <div class="contacts__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d560.425751372019!2d37.61976761770637!3d55.81575625954374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5360b7fc3deb5%3A0x7c12e38124a26ad!2z0JrQu9C40L3QuNC60LAg0KbQtdC90YLRgCDQrdCa0J4!5e0!3m2!1sru!2sru!4v1568116457053!5m2!1sru!2sru" width="" height="" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </section>
-      <section class="feedback">
-        <h2 class="visually-hidden">
-          Оставить заявку
-        </h2>
-        <a class="page-main__title feedback__title" id="feedback">
-          Оставить заявку
-        </a>
-        <form class="feedback__form">
-          <input type="hidden" name="project_name" value="Sweet Mom">
-          <input type="hidden" name="admin_email" value=" sweetmom.ru@gmail.com">
-          <input type="hidden" name="form_subject" value="Form Subject">
 
-          <div class="feedback__contacts">
-            <div class="feedback__name">
-              <label for="surname"></label>
-              <input class="feedback__name-input" id="surname" type="text" name="Name" value="" placeholder="Как Вас зовут?" required>
-            </div>
-            <div class="feedback__email">
-              <label for="user-email"></label>
-              <input class="feedback__email-input" id="user-email" type="email" name="E-mail" value="" placeholder="Ваша электронная почта" required>
-            </div>
-            <div class="feedback__tel">
-              <label for="user-tel"></label>
-              <input class="feedback__tel-input" id="user-tel" type="tel" name="Phone" value="" placeholder="Номер телефона" required>
-            </div>
-          </div>
-          <div class="feedback__checkbox">
-            <input class="feedback__checkbox-input" type="checkbox" name="consent" id="consent" checked>
-            <label for="consent">Я даю согласие на обработку своих
-              <a class="feedback__link" href="img/Polozhenie_ob_obrabotke_pers_dannyh.pdf">персональных данных</a>
-              .</label>
-          </div>
-          <button class="feedback__button" type="submit">Записаться на приём</button>
-        </form>
-      </section>
+
+
     </main>
-    <footer class="page-footer">
-      <div class="page-footer__copyright">
+    <footer class="footer">
+      <div class="footer__wrap">
+        <a class="footer__logo" href="index.html">
+          <img class="footer__image" src="img/logo-290x159.png" width="" height="" alt="Logo">
+        </a>
+        <div class="footer__contacts">
+          <h3 class="footer__contacts-title">
+            Контакты
+          </h3>
+          <div class="footer__adress">
+            644070, г. Москва, Название улицы, 87
+          </div>
+          <a class="footer__phone" href="tel:+74952155544">+7 (495) 215-55-44</a>
+        </div>
+      </div>
+      <div class="page__copyright">
         © Все права защищены. 2007-2019 г.
       </div>
     </footer>
